logs/error-2023-04-11.log
2023-04-11T05:31:01.267Z [buyease-api] error: uncaughtException: Cannot access 'authRoutes' before initialization
ReferenceError: Cannot access 'authRoutes' before initialization
    at Object.<anonymous> (/home/psychval/buyease/server/app.js:14:18)
    at Module._compile (internal/modules/cjs/loader.js:1072:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
    at Module.load (internal/modules/cjs/loader.js:937:32)
    at Function.Module._load (internal/modules/cjs/loader.js:778:12)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:76:12)
    at internal/main/run_main_module.js:17:47
2023-04-11T05:33:16.475Z [buyease-api] error: uncaughtException: Cannot access 'authRoutes' before initialization
ReferenceError: Cannot access 'authRoutes' before initialization
    at Object.<anonymous> (/home/psychval/buyease/server/app.js:14:18)
    at Module._compile (internal/modules/cjs/loader.js:1072:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
    at Module.load (internal/modules/cjs/loader.js:937:32)
    at Function.Module._load (internal/modules/cjs/loader.js:778:12)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:76:12)
    at internal/main/run_main_module.js:17:47
2023-04-11T05:55:39.835Z [buyease-api] error: uncaughtException: Cannot access 'authRoutes' before initialization
ReferenceError: Cannot access 'authRoutes' before initialization
    at Object.<anonymous> (/home/psychval/buyease/server/app.js:14:18)
    at Module._compile (internal/modules/cjs/loader.js:1072:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
    at Module.load (internal/modules/cjs/loader.js:937:32)
    at Function.Module._load (internal/modules/cjs/loader.js:778:12)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:76:12)
    at internal/main/run_main_module.js:17:47
2023-04-11T05:59:47.736Z [buyease-api] error: uncaughtException: Cannot access 'authRoutes' before initialization
ReferenceError: Cannot access 'authRoutes' before initialization
    at Object.<anonymous> (/home/psychval/buyease/server/app.js:14:18)
    at Module._compile (internal/modules/cjs/loader.js:1072:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
    at Module.load (internal/modules/cjs/loader.js:937:32)
    at Function.Module._load (internal/modules/cjs/loader.js:778:12)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:76:12)
    at internal/main/run_main_module.js:17:47
2023-04-11T06:07:10.892Z [buyease-api] error: uncaughtException: Cannot access 'authRoutes' before initialization
ReferenceError: Cannot access 'authRoutes' before initialization
    at Object.<anonymous> (/home/psychval/buyease/server/app.js:14:18)
    at Module._compile (internal/modules/cjs/loader.js:1072:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
    at Module.load (internal/modules/cjs/loader.js:937:32)
    at Function.Module._load (internal/modules/cjs/loader.js:778:12)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:76:12)
    at internal/main/run_main_module.js:17:47
2023-04-11T06:07:23.982Z [buyease-api] error: uncaughtException: authRoutes is not defined
ReferenceError: authRoutes is not defined
    at Object.<anonymous> (/home/psychval/buyease/server/app.js:14:18)
    at Module._compile (internal/modules/cjs/loader.js:1072:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
    at Module.load (internal/modules/cjs/loader.js:937:32)
    at Function.Module._load (internal/modules/cjs/loader.js:778:12)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:76:12)
    at internal/main/run_main_module.js:17:47
2023-04-11T06:10:19.782Z [buyease-api] error: uncaughtException: Cannot access 'authRoutes' before initialization
ReferenceError: Cannot access 'authRoutes' before initialization
    at Object.<anonymous> (/home/psychval/buyease/server/app.js:20:18)
    at Module._compile (internal/modules/cjs/loader.js:1072:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
    at Module.load (internal/modules/cjs/loader.js:937:32)
    at Function.Module._load (internal/modules/cjs/loader.js:778:12)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:76:12)
    at internal/main/run_main_module.js:17:47
2023-04-11T16:51:13.802Z [buyease-api] error: uncaughtException: Cannot access 'authRoutes' before initialization
ReferenceError: Cannot access 'authRoutes' before initialization
    at Object.<anonymous> (/home/psychval/buyease/server/app.js:20:18)
    at Module._compile (internal/modules/cjs/loader.js:1072:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
    at Module.load (internal/modules/cjs/loader.js:937:32)
    at Function.Module._load (internal/modules/cjs/loader.js:778:12)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:76:12)
    at internal/main/run_main_module.js:17:47
2023-04-11T16:54:47.988Z [buyease-api] error: uncaughtException: Cannot access 'authRoutes' before initialization
ReferenceError: Cannot access 'authRoutes' before initialization
    at Object.<anonymous> (/home/psychval/buyease/server/app.js:20:18)
    at Module._compile (internal/modules/cjs/loader.js:1072:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
    at Module.load (internal/modules/cjs/loader.js:937:32)
    at Function.Module._load (internal/modules/cjs/loader.js:778:12)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:76:12)
    at internal/main/run_main_module.js:17:47
2023-04-11T17:14:24.278Z [buyease-api] error: uncaughtException: Cannot access 'authRoutes' before initialization
ReferenceError: Cannot access 'authRoutes' before initialization
    at Object.<anonymous> (/home/psychval/buyease/server/app.js:20:18)
    at Module._compile (internal/modules/cjs/loader.js:1072:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
    at Module.load (internal/modules/cjs/loader.js:937:32)
    at Function.Module._load (internal/modules/cjs/loader.js:778:12)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:76:12)
    at internal/main/run_main_module.js:17:47
2023-04-11T17:18:51.802Z [buyease-api] error: uncaughtException: Unexpected token '{'
/home/psychval/buyease/server/src/routes/authRoutes.js:6
router.post("/register", register){
                                  ^

SyntaxError: Unexpected token '{'
    at wrapSafe (internal/modules/cjs/loader.js:988:16)
    at Module._compile (internal/modules/cjs/loader.js:1036:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
    at Module.load (internal/modules/cjs/loader.js:937:32)
    at Function.Module._load (internal/modules/cjs/loader.js:778:12)
    at Module.require (internal/modules/cjs/loader.js:961:19)
    at require (internal/modules/cjs/helpers.js:92:18)
    at Object.<anonymous> (/home/psychval/buyease/server/app.js:29:20)
    at Module._compile (internal/modules/cjs/loader.js:1072:14)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)
